# airlock-python

./: CHANGELOG.md  LICENSE  README.md  airlock.db  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
contracts/: CHANGELOG.md  canonical-json.md  idempotency.md  openapi.yaml  signing.md
contracts/events/: action_event.v1.json
contracts/events/examples/: action_event.v1.committed.json  action_event.v1.denied.json  action_event.v1.failed.json
contracts/examples/: approval_decided.webhook.json  create_approval.request.json  create_approval.request.with_context.json  create_approval.request.with_reject_reasons.json  create_approval.response.json  get_approval.response.json  signing_vectors.json
docs/: api.md  architecture.md  event-schema.md
examples/: README.md
examples/double_refund/: README.md  demo.py  fake_payment_api.py
examples/hosted_gated/: README.md  demo.py
examples/integrations/: README.md
examples/integrations/crewai/: README.md  demo.py  requirements.txt
examples/integrations/langchain/: README.md  demo.py  requirements.txt
examples/integrations/openai_agents/: README.md  demo.py  requirements.txt
src/airlock/: __init__.py  __main__.py  _canonical.py  _guard.py  _signing.py  audit.py  commit.py  effects.py  errors.py  events.py  idempotency.py  pause.py  policy.py  reconcile.py  registry.py  types.py
src/airlock/store/: __init__.py  _schema.py  postgres.py  sqlite.py
src/airlock/transport/: __init__.py  console.py  http.py
tests/: __init__.py  _cli_integrator.py  _harness.py  _no_sleep.py  _pause_harness.py  conftest.py  test_apply_decision.py  test_audit_atomicity.py  test_audit_chain.py  test_audit_cli.py  test_audit_concurrency.py  test_audit_reconcile.py  test_audit_sqlite.py  test_canonical.py  test_commit_concurrency.py  test_commit_effects.py  test_commit_once.py  test_console_transport.py  test_crash_sigkill_equivalence.py  test_cross_repo_e2e.py  test_effects.py  test_events_contract.py  test_examples_double_refund.py  test_examples_hosted_gated.py  test_guard.py  test_guard_events.py  test_guard_pause.py  test_hot_path.py  test_http_transport.py  test_idempotency.py  test_mvp_e2e.py  test_pause_concurrency.py  test_pause_crash.py  test_pause_store.py  test_policy.py  test_property_commit.py  test_readme_examples.py  test_reconcile.py  test_reconcile_cli.py  test_reconcile_crash.py  (+10 more)
