[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock"
version = "0.0.1"
description = "Agent-action safety SDK: gate irreversible actions, commit exactly once, tamper-evident audit."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2",
    "psycopg[binary]>=3",
]
http = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "hypothesis",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airlock"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "concurrency: multi-process barrier tests hammering one idempotency key (SPEC section 9)",
]
