[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The import name is `airlock` (the package is src/airlock); the PyPI
# distribution is `airlock-sdk` (the bare `airlock` name is taken on PyPI). So
# users `pip install airlock-sdk` and then `import airlock`. The real-PyPI
# publish + trusted-publisher registration are a separate release step, HELD
# until after this PR merges — this file only sets launch-quality metadata.
[project]
name = "airlock-sdk"
version = "0.0.1"
description = "Agent-action safety SDK: gate irreversible actions, commit exactly once, tamper-evident audit."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Airlock" }]
keywords = [
    "agent",
    "ai-agents",
    "llm",
    "tool-use",
    "idempotency",
    "exactly-once",
    "human-in-the-loop",
    "approval",
    "audit-log",
    "safety",
    "guardrails",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/SUMAR7/airlock-python"
Repository = "https://github.com/SUMAR7/airlock-python"
Issues = "https://github.com/SUMAR7/airlock-python/issues"
Changelog = "https://github.com/SUMAR7/airlock-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2",
    "psycopg[binary]>=3",
]
http = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "hypothesis",
    "ruff",
    "mypy",
    # Test-only: validates the /contracts/events fixtures against the JSON
    # Schema (the model <-> schema <-> fixture round-trip, PLAN.md 6.3).
    # Never a runtime dependency — the base import stays pydantic-only.
    "jsonschema",
    "types-jsonschema",
    # Test-only: parses /contracts/openapi.yaml for the wire-contract test
    # (the 3 paths, the frozen request allowlist, additionalProperties:false,
    # no forbidden field names — P3.1). Never a runtime dependency; the base
    # import stays pydantic-only, and the wire client (P3.4) is hand-written
    # over httpx, never generated from this file (SPEC.md 2).
    "pyyaml",
    "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airlock"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "concurrency: multi-process barrier tests hammering one idempotency key (SPEC section 9)",
    "crash: subprocess crash-injection tests (os._exit / SIGKILL mid-flight) (SPEC section 9)",
    "race: named race tests, e.g. slow-owner-vs-reconciler epoch fence (PLAN section 7)",
    "property: the Hypothesis property machine (I1-I5) — derandomized on CI (PLAN section 7)",
    "e2e: the cross-repo real-Rails E2E (P3.4) — boots airlock-cloud; skipped where ruby/pg absent",
]
